<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteJournalContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/linear_layout_background">

    <!--this is the XML file file for deletion confirmation, whenever user delete journal
                    this dialouge option will be pop up-->

    <ImageView
        android:id="@+id/imageDeleteJournal"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        app:layout_goneMarginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:textColor="#267163"
        android:textSize="16dp"
        android:text="@string/deleteJournal"
        app:layout_constraintBottom_toBottomOf="@+id/imageDeleteJournal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageDeleteJournal"
        app:layout_constraintTop_toTopOf="@+id/imageDeleteJournal"/>
    
    <TextView
        android:id="@+id/textDeleteJournalMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/journalDialog"
        android:textColor="#267163"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageDeleteJournal"/>

    <TextView
        android:id="@+id/textDeleteJournal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/dltJounal"
        android:textColor="@color/colorDelete"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteJournalMessage"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel_dialog"
        android:textColor="#267163"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textDeleteJournal"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteJournalMessage"/>

    
    

</androidx.constraintlayout.widget.ConstraintLayout>