<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layoutGroup"
    android:background="#267163"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <!--This is a XML page to select diffent option while creating and updating journal-->

    <TextView
        android:id="@+id/textGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:layout_width="320dp"
        android:gravity="center_horizontal"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="42dp"/>

    <!--color selection -->

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="12dp"
            >
            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color"
                />
            <ImageView
                android:id="@+id/imageColor"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_done_24"
                app:tint="@color/black"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="12dp"
            >
            <View
                android:id="@+id/viewColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color2"
                />
            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_done_24"
                app:tint="@color/white"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="12dp"
            >
            <View
                android:id="@+id/viewColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color3"
                />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_done_24"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="@string/choose_color"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"/>



    </LinearLayout>


    <!--Image and camera section-->
    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>


    <!--For share option journal while updating it-->
    <LinearLayout
        android:id="@+id/layoutShare"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_share"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:includeFontPadding="false"
            android:text="@string/share"/>


    </LinearLayout>

    <!--for delete option-->
    <LinearLayout
        android:id="@+id/layoutDeleteJournal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorDelete"
            android:textSize="12dp"
            android:includeFontPadding="false"
            android:text="@string/delete_note"/>


    </LinearLayout>


</LinearLayout>