<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LocationMap">


  <!--This is the XML file for viewing google map-->
  <TextView
      android:id="@+id/myNotes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="15.7dp"
      android:fontFamily="sans-serif"
      android:includeFontPadding="false"
      android:text="@string/myJournal"
      android:textColor="#267163"
      android:textSize="27.76sp"
      android:textStyle="bold"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      tools:layout_editor_absoluteX="12dp"
      />

  <TextView
      android:id="@+id/myMap"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginStart="25.7dp"
      android:fontFamily="sans-serif"
      android:includeFontPadding="false"
      android:text="@string/Location"
      android:textColor="#267163"
      android:textSize="22.76sp"
      android:textStyle="bold"
      app:layout_constraintTop_toTopOf="@+id/myNotes"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <!--This is the map section-->
  <fragment
      android:id="@+id/google_map"
      android:layout_width="380dp"
      android:layout_height="620dp"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginRight="15dp"
      app:layout_constraintTop_toTopOf="@+id/myMap"
      android:layout_marginTop="50dp"
      android:name="com.google.android.gms.maps.SupportMapFragment"/>

  <!--This is the navigation bar to go to dashboard and calender page -->
  <LinearLayout
      android:id="@+id/layoutQuickAction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#267163"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="13dp"
      app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
        android:id="@+id/DashHome"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="65.70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_home_24"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/mapAddNote"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_location"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/calender1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:tint="@color/white" />
  </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>