<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintLayout_main"
    android:background="@color/colorWhite"
    tools:context=".views.Register">

    <!--This is the XML file for regrastration of new user-->

    <!--This is the logo section-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:scaleType="fitCenter"
        android:layout_height="130dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_logo11"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="#267163"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!--journey journal written section-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:textSize="36dp"
        android:layout_marginTop="-44dp"
        android:layout_marginLeft="-130dp"
        android:src="@drawable/ic_check_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!--section for username-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userName"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="46dp"
        android:ems="10"
        android:hint="UserName"
        android:inputType="textPersonName"
        android:textColor="#267163"
        android:textColorHint="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!--section for email-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#267163"
        android:textColorHint="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <!--section for password-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtPassword"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#267163"
        android:textColorHint="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <!--section for re-type password-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtCheckPassword"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
       android:hint="Re-type Password"
        android:inputType="textPassword"
        android:textColor="#267163"
        android:textColorHint="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <!--section for show and hide password option-->
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/showHidePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:textColor="#267163"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckPassword"
        />

    <!--section for signup section-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="20dp"
        android:background="#267163"
        android:clickable="true"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHidePwd" />

    <!--section for redirection to login page-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="#267163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        android:textSize="17.9sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="35dp"
        android:text="@string/copyright"
        android:textColor="#267163"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHere" />

</androidx.constraintlayout.widget.ConstraintLayout>