<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".journal.CreateJournal">

    <!--This is the XML file for create Journal-->

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <!--back option code-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Journal save option code-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageSave"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:tint="#267163"
                android:src="@drawable/ic_baseline_done_24"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />


            <!--for note title-->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="#267163"
                android:textColorHint="#267163"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageBack" />

            <!--for date and time selection-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDateTime"
                android:layout_width="200dp"
                android:layout_height="23dp"
                android:textStyle="bold"
                android:text="@string/pickDate"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="#267163"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/pickDate"
                android:includeFontPadding="false"
                android:textColor="#267163"
                android:textSize="10.9sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <!--for adding location-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/layoutLocation"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textDateTime">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtlocation"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:textColor="#267163"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:text="@string/yourLocation"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:backgroundTint="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/ic_baseline_add_location_24"
                    android:id="@+id/addLocation"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/layoutLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutLocation" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/layoutLocation" />

            <!--for deleting images-->
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/imageNote"
                app:layout_constraintTop_toTopOf="@+id/imageNote"
                app:tint="@color/colorwhite" />

            <!--for description section-->
            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@null"
                android:fontFamily="@font/poppins_light"
                android:gravity="top"
                android:hint="@string/enter_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:textColor="#267163"
                android:textColorHint="#267163"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageNote" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--for more option I have make seperate XML file and import here-->
    <include layout="@layout/layout_group"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>